[tool.poetry]
name = "repl_python3_PreparingDataForAnalysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
replit = "^3.2.0"
sklearn = "^0.0"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
